--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,31 @@ services:
     container_name: app
     depends_on:
       - postgres
+    env_file:
+      - .env
     environment:
       - API_PORT=${API_PORT}
     volumes:
       - .:/app
     ports:
       - "8080:8080"
+    networks:
+      - general-network
 
   postgres:
     image: postgres:latest
     user: postgres
     container_name: postgresdb
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-d", "api", "-U", "postgres"]
+      test: ["CMD-SHELL", "pg_isready", "-d", "api", "-U", "postgres"]
       interval: 1m30s
       timeout: 30s
       retries: 5
       start_period: 30s
     environment:
-       POSTGRES_USER: "postgres"
-       POSTGRES_PASSWORD: "postgres"
-       POSTGRES_DB: "api"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "api"
     restart: always
     ports:
       - "5432:5432"
@@ -32,13 +36,10 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - general-network
-      
-    
-  
+
 volumes:
   postgres_data:
 
 networks:
   general-network:
     driver: bridge
-  
