routes and repositories refactor

--- a/alembic.ini
+++ b/alembic.ini
@@ -138,4 +138,4 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/api
+sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/test_db
