--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_DB_NAME=api
 POSTGRES_USER=postgres
 POSTGRES_PASS=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 PYTHON_ENV=development
 API_PORT=8080
