--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - .env
     environment:
       - API_PORT=${API_PORT}
+      - POSTGRES_HOST=${POSTGRES_HOST}
     volumes:
       - .:/app
     ports:
